# cuda_examples

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  README.md
001_setup_check/: Makefile  hello_world  hello_world.cu
002_simple_thrust/: Makefile  simple_thrust  simple_thrust.cu
003_bandwidth_check/: Makefile  bandwidth_check  bandwidth_check.cu
004_nvtx/: Makefile  make_run_and_profile.sh  nvtx_example.cu
005_alloc_init_vs_alloc_uninit/: Makefile  alloc_init_vs_alloc_uninit.cu
005_thrust_algos/: Makefile  algos.cu
KernelAndLibExamples/simple_thrust/: Makefile  README.md
KernelAndLibExamples/vector_add/: Makefile  README.md  vector_add.cu
MemoryAndStructureExamples/alloc_init_vs_alloc_uninit/: Makefile  alloc_init_vs_alloc_uninit.cu
MemoryAndStructureExamples/pinned_vs_pageable/: Makefile  README.md  pinned_vs_pageable.cu
PerformanceChecklistExamples/: README.md
PerformanceChecklistExamples/cuda_streams/: Makefile  cuda_streams.cu
ProfilingExamples/bandwidth_check/: Makefile  bandwidth_check.cu
ProfilingExamples/cuda_streams/: Makefile
ProfilingExamples/global_vs_shared_mem/: Makefile  global_vs_shared.cu
ProfilingExamples/memory_bank_conflict/: Makefile  bank_conflict.cu  make_run_and_profile.sh
ProfilingExamples/nvtx/: Makefile  nvtx_example.cu
SetupAndInitExamples/setup_check/: Makefile  hello_world.cu
TensorParallelFromScratch/00_intro_to_tensors/: README.md
TensorParallelFromScratch/01_simple_matmul_no_tp/: Makefile  README.md  matmul.cu
TensorParallelFromScratch/02_matmul_tp/: Makefile  matmul_tp_big.cu  matmul_tp_small.cu
bandwidth_check/: bandwidth_check  bandwidth_check.cu
utils/: nvtx_event.cuh  utils.cuh
vector_add/: vector_add.cu
